Added find out more with underline to all slider pictures.

--- a/app/views/distributors/international.html.erb
+++ b/app/views/distributors/international.html.erb
@@ -73,7 +73,7 @@
       <p>
         Tel: + 64 9 828 2777<br>
         Fax: + 64 9 828 2424<br>
-        Email: <a href="mailto:tait@fortressfasteners.kiwi">tait@fortressfasteners.co.nz</a><br>
+        Email: <a href="mailto:tait@fortressfasteners.kiwi">tait@fortress.kiwi</a><br>
         Web: <a href="www.fortressfasteners.co.nz">www.fortressfasteners.co.nz</a>
       <p>
     </div>
