Added a click to find out more link to WTW video on home page.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -46,7 +46,7 @@
 				<div class="written">
 					<h3><a href="/downloads/videos#wtw">What Trades Want</a></h3>
 					<p>
-						The boys over at What Trades Want did a review of our collated auto-feed screw guns in action. They test out a couple of our tools to see how they perform in a variety of applications.
+						The boys over at What Trades Want did a review of our collated auto-feed screw guns in action. They test out a couple of our tools to see how they perform in a variety of applications. <br><strong><a href="/downloads/videos#wtw">Click here</a></strong> to see them in action.
 					</p>
 				</div>
 			</article>
