--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -63,7 +63,9 @@
 	p {
 		line-height: 1.2em;
 		margin-top: 5px;
+		font-family: "Helvetica-Roman", Arial, sans-serif;
 	}
+
 	a {
 		color: black;
 	}
