--- a/app/views/products/specialty.html.erb
+++ b/app/views/products/specialty.html.erb
@@ -11,7 +11,7 @@
     <h4 class="zoom-header"> * Hover mouse over tool to zoom in.</h4>
 
     <div class="more-pics group">
-      <img class="main zoom_01" class="main" src="/products/specialty/peeler-stretch.png" data-zoom-image="/products/specialty/peeler-stretch-large.png">
+      <img class="main zoom_01" class="main" src="/products/specialty/peeler-stretch.png" data-zoom-image="/products/specialty/peeler-stretch-large.jpg">
 
       <img class="main zoom_01 two" class="main" src="/products/specialty/peeler-orange.png" data-zoom-image="/products/specialty/peeler-orange-large.png">
       <img class="main zoom_01 two" class="main" src="/products/specialty/peeler-black.png" data-zoom-image="/products/specialty/peeler-black-large.png">
