--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -55,7 +55,7 @@
 
 /* Go Back to Top Button */
 
-.go-top {
+.go-top, .scroll {
   display: inline-block;
   padding: 5px 10px;
   line-height: 35px;
@@ -77,9 +77,20 @@
   font-size: 1em;
 }
 
-.go-top.show { bottom: 20px; }
+.scroll-right {
+  bottom: -40px;
+  right: 20px;
+}
 
-.go-top:hover {
+.scroll-left {
+  bottom: -40px;
+  left: 20px;
+}
+
+.go-top.show { bottom: 20px; }
+.scroll.show { bottom: 200px; }
+
+.go-top:hover, .scroll:hover {
   background-color: $green;
   color: #FFFFFF;
 }
