--- a/app/views/products/_accessories_table.html.erb
+++ b/app/views/products/_accessories_table.html.erb
@@ -87,8 +87,8 @@
           <th class="CH7390SW"><%= link_to "CH7390SW", products_tool_path(:id=>1) %></th>
           <th class="CH7241DE"><%= link_to "CH7241DE", products_tool_path(:id=>2) %></th>
           <th class="CH7241WU"><%= link_to "CH7241WU", products_tool_path(:id=>2) %></th>
-          <th class="CH7219U-VG-W"><%= link_to "CH7219U-VG-W", "#" %></th>
-          <th class="CH7216U"><%= link_to "CH7216U", "#" %></th>
+          <th class="CH7219U-VG-W"><%= link_to "CH7219U-VG-W", products_tool_path(:id=>2) %></th>
+          <th class="CH7216U"><%= link_to "CH7216U", products_tool_path(:id=>2) %></th>
           <th class="CH7260"><%= link_to "CH7260", products_tool_path(:id=>3) %></th>
           <th class="CH7263"><%= link_to "CH7263", products_tool_path(:id=>3) %></th>
           <th class="CH7264"><%= link_to "CH7264", products_tool_path(:id=>3) %></th>
