--- a/app/views/applications/_more_applications_table.html.erb
+++ b/app/views/applications/_more_applications_table.html.erb
@@ -16,15 +16,17 @@
       <tr>
         <td class="light-grey bold">RPM</td>
       </tr>
-    </thead>
 
       <tr class="top-border">
         <td class="grey bold">Application</td>
       </tr>
 
       <tr class="top-border">
-        <td class="ligdt-grey bold">Magazine Mount</td>
+        <td class="light-grey bold">Magazine Mount</td>
       </tr>
+    </thead>
+
+
 
 
       <tr class="application application top-border">
@@ -166,7 +168,7 @@
 
   <div id="table-container">
     <table id="scroll">
-      <div>
+      <thead>
         <tr class="top-header">
           <th id="CH7390" class="CH7390"><%= link_to "CH7390", products_tool_path(:id=>1) %></th>
           <th class="CH7392SF"><%= link_to "CH7392SF", products_tool_path(:id=>1) %></th>
@@ -310,7 +312,7 @@
           <td class="LWVL32">side</td>
           <td class="LHVL32">side</td>
         </tr>
-      </div>
+      </thead>
 
       <div id="tools">
       <!--  Sub Floor (wood/cement boards) -->
