--- a/app/views/welcome/_search_results.html.erb
+++ b/app/views/welcome/_search_results.html.erb
@@ -91,7 +91,7 @@
 
   <% unless @specialties.empty? %>
     <h3>Specialty</h3>
-    <div id="accessories-results">
+    <div id="specialties-results">
       <%  @specialties.each do |specialty| %>
         <div class="result group">
           <div class="left">
