--- a/app/assets/stylesheets/products/screws.scss
+++ b/app/assets/stylesheets/products/screws.scss
@@ -1,7 +1,8 @@
 .screw-links {
   li {
     list-style-image: url(/products/screws/triangle-bullet.png);
-    font-family: 'Helvetica-Bold', Arial, sans-serif;
+    font-family:  Arial, sans-serif;
+    font-weight: 600;
     font-size: 1.1em;
     line-height: 1.7em;
     margin-left: 1em;
@@ -21,12 +22,14 @@
     margin: 80px 0 0;
     font-size: 1.5em;
     color: black;
-    font-family: Helvetica-Roman, Arial;
+    font-family:  Arial, sans-serif;
+font-weight: 400;
   }
 
   h3 {
     text-decoration: underline;
-    font-family: Helvetica-Roman;
+    font-family:  Arial, sans-serif;
+font-weight: 400;
     color: black;
     margin-bottom: 0.5em;
   }
@@ -130,7 +133,8 @@ tr.headers {
 }
 
 .coming_soon {
-  font-family: 'Helvetica-Bold';
+  font-family:  Arial, sans-serif;
+font-weight: 600;
   margin-bottom: -80px;
 }
 
