--- a/app/assets/stylesheets/products/specialty.scss
+++ b/app/assets/stylesheets/products/specialty.scss
@@ -7,14 +7,16 @@
 .subheader {
 
   h2 {
-    font-family: 'Helvetica-Bold', Arial;
+    font-family:  Arial, sans-serif;
+font-weight: 600;
     color: black;
     font-size: 1.9em;
     margin-bottom: 0;
   }
 
   h3 {
-    font-family: 'Helvetica-Roman';
+    font-family:  Arial, sans-serif;
+font-weight: 400;
     margin-bottom: 30px;
     color: $green;
   }
