--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -30,7 +30,8 @@
 
 
     h3 {
-      font-family: Helvetica-Bold;
+      font-family:  Arial, sans-serif;
+font-weight: 600;
       font-size: 1.2em;
     }
   }
