--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -31,7 +31,8 @@
   width: 55%;
 
   h3 {
-    font-family: 'Helvetica-Roman';
+    font-family:  Arial, sans-serif;
+font-weight: 400;
     font-size: 1.5em;
   }
 
@@ -71,7 +72,8 @@
     cursor:pointer;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-    font-family: 'Helvetica-Bold';
+    font-family:  Arial, sans-serif;
+font-weight: 600;
     margin-top: 30px;
 
     &:hover {
@@ -81,7 +83,8 @@
   }
 
   h3 {
-    font-family: 'Helvetica-Bold';
+    font-family:  Arial, sans-serif;
+font-weight: 600;
     font-size: 1.1em;
     text-align: center;
     display: inline;
