--- a/app/assets/stylesheets/customer_service.scss
+++ b/app/assets/stylesheets/customer_service.scss
@@ -9,7 +9,8 @@
   h3 {
     margin-bottom: 1em;
     text-align: center;
-    font-family: 'Helvetica-Bold';
+    font-family:  Arial, sans-serif;
+font-weight: 600;
     font-size: .9em;
   }
 }
@@ -30,7 +31,8 @@
   label {
     display: block;
     margin-bottom: 10px;
-    font-family: 'Helvetica-Bold'
+    font-family:  Arial, sans-serif;
+    font-weight: 600;
   }
 
   input, select {
@@ -123,13 +125,15 @@ img.icon {
   }
 
   h3 {
-    font-family: "Helvetica-Bold";
+    font-family:  Arial, sans-serif;
+font-weight: 600;
     color: $green;
     font-size: 1.5em;
   }
 
   h4 {
-    font-family: "Helvetica-Bold";
+    font-family:  Arial, sans-serif;
+font-weight: 600;
     color: black;
     text-transform: uppercase;
     margin-top: .3em;
