--- a/app/assets/stylesheets/downloads.scss
+++ b/app/assets/stylesheets/downloads.scss
@@ -29,7 +29,8 @@
   }
 
   h4 {
-    font-family: 'Helvetica-Bold';
+    font-family:  Arial, sans-serif;
+font-weight: 600;
     text-align: center;
   }
 }
@@ -84,7 +85,8 @@
       margin-left: 5%;
 
       h3 {
-        font-family: Helvetica-Bold, Arial, sans-serif;
+        font-family:  Arial, sans-serif;
+font-weight: 600;
         font-size: 1.5em;
         margin-bottom: .3em;
       }
@@ -98,7 +100,8 @@
       }
 
       h4 {
-        font-family: Helvetica-Bold, Arial, sans-serif;
+        font-family:  Arial, sans-serif;
+font-weight: 600;
         color: black;
         font-size: 1em;
         margin-bottom: .3em;
