--- a/app/assets/stylesheets/faqs.scss
+++ b/app/assets/stylesheets/faqs.scss
@@ -14,7 +14,8 @@
 .question {
 
   p {
-    font-family: 'Helvetica-Bold';
+    font-family:  Arial, sans-serif;
+font-weight: 600;
     font-size: 1.2em;
     display: inline-block;
     width: 80%;
@@ -37,7 +38,8 @@ span.Q, span.A {
   font-size: 2em;
   position:  relative;
   top:  5px;
-  font-family: 'Helvetica-Bold';
+  font-family:  Arial, sans-serif;
+font-weight: 600;
   display: inline-block;
   width: 5%;
   vertical-align: top;
