--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -4,26 +4,30 @@
   }
 
 .product h1 {
-  font-family: 'Helvetica-Bold', Arial;
+  font-family:  Arial, sans-serif;
+font-weight: 600;
   border-bottom: solid 1px $red;
   padding-bottom: .5em;
 }
 
 .product h2 {
-  font-family: 'Helvetica-Light', Arial;
+  font-family:  Arial, sans-serif;
+font-weight: 300;
   font-size: 1.6em;
   color: #f01f15;
   margin-bottom: 30px;
 }
 
 .product h3 {
-  font-family: 'Helvetica-Bold', Arial;
+  font-family:  Arial, sans-serif;
+font-weight: 600;
   font-size: 1.2em;
   color: #f01f15;
 }
 
 /*.product h4 {
-  font-family: 'Helvetica-Bold', Arial;
+  font-family:  Arial, sans-serif;
+font-weight: 600;
   font-size: 1.4em;
   color: #f01f15;
   margin-bottom: 30px;
@@ -69,7 +73,8 @@ div.applications ul {
 div.applications ul li {
   width: 50%;
   float: left;
-  font-family: 'Helvetica-Bold', Arial;
+  font-family:  Arial, sans-serif;
+font-weight: 600;
 }
 
 
@@ -84,7 +89,8 @@ div.applications ul li {
   background: #2d2d2d;
   width: 90%;
   padding: 5%;
-  font-family: 'Helvetica-Light', Arial;
+  font-family:  Arial, sans-serif;
+font-weight: 300;
 }
 
 #specifications {
@@ -96,7 +102,8 @@ div.applications ul li {
 }
 
 #models h3 {
-  font-family: 'Helvetica', Arial;
+  font-family:  Arial, sans-serif;
+font-weight: 400;
   text-decoration: underline;
   color: white;
   margin-bottom: 1em;
@@ -136,7 +143,8 @@ tr.separator td {
 }
 
 .rowspan, .colspan {
-  font-family: 'Helvetica-Bold';
+  font-family:  Arial, sans-serif;
+font-weight: 600;
   text-align: center;
   vertical-align: middle;
   font-size: 1.3em;
@@ -183,13 +191,14 @@ ul.tabs li:link {
 .ui-widget-header .ui-state-active  {
   border: 1px solid #2d2d2d;
   background: #2d2d2d;
-  font-weight: normal;
+
   color: #212121;
 }
 
 .zoom-header {
   font-size: 1em;
-  font-family: 'Helvetica-Bold', Arial;
+  font-family:  Arial, sans-serif;
+font-weight: 600;
   padding-top: .5em;
 }
 
