--- a/app/assets/stylesheets/products/tools.scss
+++ b/app/assets/stylesheets/products/tools.scss
@@ -4,7 +4,8 @@
   width: 21.25%;
 
   a {
-    font-family: 'Helvetica-Bold', sans-serif;
+    font-family:  Arial, sans-serif;
+font-weight: 600;
     text-transform: none;
     letter-spacing: 0;
     font-size: 1em;
@@ -29,7 +30,8 @@
 
     h4 {
       font-size: .9em;
-      font-family: Helvetica-Bold;
+      font-family:  Arial, sans-serif;
+font-weight: 600;
     }
   }
 }
