--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Muro North America</title>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -127,7 +126,7 @@
         <h3>Authorized Users Sign In</h3>
       </div>
     <% end %>
-    <p class="clear">First time users please <strong><a href="<%= contact_path %>">contact</a> Muro for your access codes.</p>
+    <p class="clear">First time users please <strong><a href="<%= contact_path %>">contact</a></strong> Muro for your access codes.</p>
 	</div>
 
 
